Lab-2 initial commit

--- a/Lab-1/favourites.html
+++ b/Lab-1/favourites.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="style.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -20,7 +20,7 @@
   </head>
   <body>
     <nav class="fixed-navigation">
-      <a href="index.html#"><img class="logo" src="./Assets/logo.svg" /></a>
+      <a href="index.html#"><img class="logo" src="Assets/logo.svg" /></a>
       <ul class="nav-links">
         <li><a class="nav-link" href="index.html#">Home</a></li>
         <li><a class="nav-link" href="index.html#browse">Browse</a></li>
