--- a/Lab-1/hotel_page.html
+++ b/Lab-1/hotel_page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="./style.css"/>
+    <link rel="stylesheet" href="style.css"/>
 
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
@@ -20,12 +20,12 @@
 </head>
 <body>
 <nav class="fixed-navigation">
-    <a href="index.html#"><img class="logo" src="./Assets/logo.svg"/></a>
+    <a href="index.html#"><img class="logo" src="Assets/logo.svg"/></a>
     <ul class="nav-links">
         <li><a class="nav-link" href="index.html#">Home</a></li>
         <li><a class="nav-link" href="index.html#browse">Browse</a></li>
         <li><a class="nav-link" href="index.html#rent">Rent with us</a></li>
-        <li><a class="nav-link" href="./favourites.html">Favourites</a></li>
+        <li><a class="nav-link" href="favourites.html">Favourites</a></li>
         <li><a class="nav-link" href="index.html#">Sign up</a></li>
         <button class="button primary">Log in</button>
     </ul>
@@ -35,7 +35,7 @@
     <p class="title-large">Serene Retreat</p>
 
     <div class="hotel-details">
-        <div class="left"><img src="./Assets/cards2.jpg"/></div>
+        <div class="left"><img src="Assetsards2.jpg"/></div>
         <div class="right">
             <p><b>Location: </b>Madrid</p>
 
@@ -68,10 +68,10 @@
 
             <div class="hotel-image-container">
                 <div class="hotel-image">
-                    <img src="./Assets/cards2.jpg" alt=""/>
+                    <img src="Assetsards2.jpg" alt=""/>
                 </div>
                 <div class="hotel-image">
-                    <img src="./Assets/cards2.jpg" alt=""/>
+                    <img src="Assetsards2.jpg" alt=""/>
                 </div>
             </div>
         </div>
