--- a/Lab-1/index.html
+++ b/Lab-1/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="style.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -20,7 +20,7 @@
   </head>
   <body>
     <nav class="fixed-navigation">
-      <a href="index.html#"><img class="logo" src="./Assets/logo.svg" /></a>
+      <a href="index.html#"><img class="logo" src="Assets/logo.svg" /></a>
       <ul class="nav-links">
         <li><a class="nav-link" href="index.html#">Home</a></li>
         <li><a class="nav-link" href="index.html#browse">Browse</a></li>
@@ -41,10 +41,10 @@
         </p>
         <div class="hero-cards">
           <div class="card-image">
-            <p class="chip">New hotels <img src="./Assets/Arrow.svg" /></p>
+            <p class="chip">New hotels <img src="Assetsrrow.svg" /></p>
           </div>
           <div class="card-image">
-            <p class="chip">Best reviews <img src="./Assets/Arrow.svg" /></p>
+            <p class="chip">Best reviews <img src="Assetsrrow.svg" /></p>
           </div>
         </div>
       </article>
@@ -117,11 +117,9 @@
         </article>
       </section>
       <button class="button secondary">
-        Find more <img src="./Assets/Arrow.svg" />
+        Find more <img src="Assetsrrow.svg" />
       </button>
     </section>
-
-    
 
     <section id="rent" class="footer grid">
       <div class="card-image"></div>
@@ -132,7 +130,7 @@
           customers you can now rent your property with TranquilTravels.
         </p>
         <button class="button secondary">
-          Learn more <img src="./Assets/Arrow.svg" />
+          Learn more <img src="Assetsrrow.svg" />
         </button>
       </article>
     </section>
