--- a/Lab-1/favourites.html
+++ b/Lab-1/favourites.html
@@ -45,7 +45,7 @@
               <p class="chip">Florence</p>
               <i class="icon glyphicon glyphicon-heart"></i>
             </div>
-            <p class="text-middle">Harmony Hideaway Hotel</p>
+            <p class="text-middle">Harmony Hideaway HotelPage</p>
             <p class="text-small">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
               dapibus quis felis a venenatis. Suspendisse accumsan aliquam
@@ -67,7 +67,7 @@
               <p class="chip">Florence</p>
               <i class="icon glyphicon glyphicon-heart"></i>
             </div>
-            <p class="text-middle">Harmony Hideaway Hotel</p>
+            <p class="text-middle">Harmony Hideaway HotelPage</p>
             <p class="text-small">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
               dapibus quis felis a venenatis. Suspendisse accumsan aliquam
