--- a/Lab-1/index.html
+++ b/Lab-1/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <nav class="fixed-navigation">
-      <a href="index.html#"><img class="logo" src="Assets/logo.svg" /></a>
+      <a href="index.html#"><img class="logo" src="./Assets/logo.svg" /></a>
       <ul class="nav-links">
         <li><a class="nav-link" href="index.html#">Home</a></li>
         <li><a class="nav-link" href="index.html#browse">Browse</a></li>
@@ -41,10 +41,10 @@
         </p>
         <div class="hero-cards">
           <div class="card-image">
-            <p class="chip">New hotels <img src="Assetsrrow.svg" /></p>
+            <p class="chip">New hotels <img src="./Assets/Arrow.svg" /></p>
           </div>
           <div class="card-image">
-            <p class="chip">Best reviews <img src="Assetsrrow.svg" /></p>
+            <p class="chip">Best reviews <img src="./Assets/Arrow.svg" /></p>
           </div>
         </div>
       </article>
@@ -59,7 +59,7 @@
           <div class="card-image">
             <p class="chip">Florence</p>
           </div>
-          <p class="text-middle">Harmony Hideaway Hotel</p>
+          <p class="text-middle">Harmony Hideaway HotelPage</p>
           <p class="text-small">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
             dapibus quis felis a venenatis. Suspendisse accumsan aliquam lorem,
@@ -74,7 +74,7 @@
           <div class="card-image">
             <p class="chip">Florence</p>
           </div>
-          <p class="text-middle">Harmony Hideaway Hotel</p>
+          <p class="text-middle">Harmony Hideaway HotelPage</p>
           <p class="text-small">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
             dapibus quis felis a venenatis. Suspendisse accumsan aliquam lorem,
@@ -89,7 +89,7 @@
           <div class="card-image">
             <p class="chip">Florence</p>
           </div>
-          <p class="text-middle">Harmony Hideaway Hotel</p>
+          <p class="text-middle">Harmony Hideaway HotelPage</p>
           <p class="text-small">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
             dapibus quis felis a venenatis. Suspendisse accumsan aliquam lorem,
@@ -104,7 +104,7 @@
           <div class="card-image">
             <p class="chip">Florence</p>
           </div>
-          <p class="text-middle">Harmony Hideaway Hotel</p>
+          <p class="text-middle">Harmony Hideaway HotelPage</p>
           <p class="text-small">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
             dapibus quis felis a venenatis. Suspendisse accumsan aliquam lorem,
@@ -117,7 +117,7 @@
         </article>
       </section>
       <button class="button secondary">
-        Find more <img src="Assetsrrow.svg" />
+        Find more <img src="./Assets/Arrow.svg" />
       </button>
     </section>
 
@@ -130,7 +130,7 @@
           customers you can now rent your property with TranquilTravels.
         </p>
         <button class="button secondary">
-          Learn more <img src="Assetsrrow.svg" />
+          Learn more <img src="./Assets/Arrow.svg" />
         </button>
       </article>
     </section>
