--- a/Lab-1/hotel_page.html
+++ b/Lab-1/hotel_page.html
@@ -35,7 +35,7 @@
     <p class="title-large">Serene Retreat</p>
 
     <div class="hotel-details">
-        <div class="left"><img src="Assetsards2.jpg"/></div>
+        <div class="left"><img src="./Assets/cards2.jpg"/></div>
         <div class="right">
             <p><b>Location: </b>Madrid</p>
 
@@ -60,7 +60,7 @@
                 ligula.
             </p>
             <button class="green-button">
-              <a href="popup.html">Edit <i class="glyphicon glyphicon-pencil"></i></a>
+                <a href="popup.html">Edit <i class="glyphicon glyphicon-pencil"></i></a>
             </button>
             <button class="green-button">
                 Remove <i class="glyphicon glyphicon-trash"></i>
@@ -68,10 +68,10 @@
 
             <div class="hotel-image-container">
                 <div class="hotel-image">
-                    <img src="Assetsards2.jpg" alt=""/>
+                    <img src="./Assets/cards2.jpg" alt=""/>
                 </div>
                 <div class="hotel-image">
-                    <img src="Assetsards2.jpg" alt=""/>
+                    <img src="./Assets/cards2.jpg" alt=""/>
                 </div>
             </div>
         </div>
