--- a/Lab-3/public/index.html
+++ b/Lab-3/public/index.html
@@ -1,138 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<head>
+    <meta charset="utf-8" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="theme-color" content="#000000" />
+    <!--
+      manifest.json provides metadata used when your web app is installed on a
+      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+    -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
     <link
-      href="https://fonts.googleapis.com/css2?family=Italiana&family=Roboto+Flex:opsz,wght@8..144,300&display=swap"
-      rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Italiana&family=Roboto+Flex:opsz,wght@8..144,300&display=swap"
+            rel="stylesheet"
     />
     <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+            rel="stylesheet"
+            href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
     />
+    <!--
+      Notice the use of %PUBLIC_URL% in the tags above.
+      It will be replaced with the URL of the `public` folder during the build.
+      Only files inside the `public` folder can be referenced from the HTML.
 
-    <title>Tranquil Travels</title>
-  </head>
-  <body>
-    <nav class="fixed-navigation">
-      <a href="index.html#"><img class="logo" src="Assets/logo.svg" /></a>
-      <ul class="nav-links">
-        <li><a class="nav-link" href="index.html#">Home</a></li>
-        <li><a class="nav-link" href="index.html#browse">Browse</a></li>
-        <li><a class="nav-link" href="index.html#rent">Rent with us</a></li>
-        <li><a class="nav-link" href="favourites.html">Favourites</a></li>
-        <li><a class="nav-link" href="index.html#">Sign up</a></li>
-        <button class="button primary">Log in</button>
-      </ul>
-      <button class="button primary hidden">Menu</button>
-    </nav>
-    <section id="hero" class="grid hero-section">
-      <article class="hero-details">
-        <p class="title-large">Your tranquillity oasis awaits</p>
-        <p class="text-middle">
-          TranquilTravels is designed to help you find a serene retreat for your
-          next holidays. With us searching for the hotels nestled amidst
-          picturesque landscapes is easier than ever.
-        </p>
-        <div class="hero-cards">
-          <div class="card-image">
-            <p class="chip">New hotels <img src="Assetsrrow.svg" /></p>
-          </div>
-          <div class="card-image">
-            <p class="chip">Best reviews <img src="Assetsrrow.svg" /></p>
-          </div>
-        </div>
-      </article>
-      <div class="hero-image-container"></div>
-    </section>
+      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      work correctly both with client-side routing and a non-root public URL.
+      Learn how to configure a non-root public URL by running `npm run build`.
+    -->
+    <title>React Home</title>
+</head>
+<body>
+<noscript>You need to enable JavaScript to run this app.</noscript>
+<div id="root"></div>
+<!--
+  This HTML file is a template.
+  If you open it directly in the browser, you will see an empty page.
 
-    <section id="browse" class="browse-section">
-      <p class="title-middle">Explore the hotels</p>
-      <input class="searchbar" placeholder="Search by hotel name, place etc." />
-      <section class="grid hotel-cards">
-        <article class="hotel-card">
-          <div class="card-image">
-            <p class="chip">Florence</p>
-          </div>
-          <p class="text-middle">Harmony Hideaway Hotel</p>
-          <p class="text-small">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
-            dapibus quis felis a venenatis. Suspendisse accumsan aliquam lorem,
-            sit amet ultricies justo tristique nec.
-          </p>
-          <div class="hotel-card-footer">
-            <p class="text-middle">★★★★★</p>
-            <p class="text-middle">100€/room</p>
-          </div>
-        </article>
-        <article class="hotel-card">
-          <div class="card-image">
-            <p class="chip">Florence</p>
-          </div>
-          <p class="text-middle">Harmony Hideaway Hotel</p>
-          <p class="text-small">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
-            dapibus quis felis a venenatis. Suspendisse accumsan aliquam lorem,
-            sit amet ultricies justo tristique nec.
-          </p>
-          <div class="hotel-card-footer">
-            <p class="text-middle">★★★★★</p>
-            <p class="text-middle">100€/room</p>
-          </div>
-        </article>
-        <article class="hotel-card">
-          <div class="card-image">
-            <p class="chip">Florence</p>
-          </div>
-          <p class="text-middle">Harmony Hideaway Hotel</p>
-          <p class="text-small">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
-            dapibus quis felis a venenatis. Suspendisse accumsan aliquam lorem,
-            sit amet ultricies justo tristique nec.
-          </p>
-          <div class="hotel-card-footer">
-            <p class="text-middle">★★★★★</p>
-            <p class="text-middle">100€/room</p>
-          </div>
-        </article>
-        <article class="hotel-card">
-          <div class="card-image">
-            <p class="chip">Florence</p>
-          </div>
-          <p class="text-middle">Harmony Hideaway Hotel</p>
-          <p class="text-small">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
-            dapibus quis felis a venenatis. Suspendisse accumsan aliquam lorem,
-            sit amet ultricies justo tristique nec.
-          </p>
-          <div class="hotel-card-footer">
-            <p class="text-middle">★★★★★</p>
-            <p class="text-middle">100€/room</p>
-          </div>
-        </article>
-      </section>
-      <button class="button secondary">
-        Find more <img src="Assetsrrow.svg" />
-      </button>
-    </section>
+  You can add webfonts, meta tags, or analytics to this file.
+  The build step will place the bundled scripts into the <body> tag.
 
-    <section id="rent" class="footer grid">
-      <div class="card-image"></div>
-      <article class="footer-details">
-        <p class="title-large">Rent with us!</p>
-        <p class="text-middle">
-          If you’re a hotel or an apartament owner who’s looking to reach more
-          customers you can now rent your property with TranquilTravels.
-        </p>
-        <button class="button secondary">
-          Learn more <img src="Assetsrrow.svg" />
-        </button>
-      </article>
-    </section>
-  </body>
+  To begin the development, run `npm start` or `yarn start`.
+  To create a production bundle, use `npm run build` or `yarn build`.
+-->
+</body>
 </html>
